<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_connect"/>
    
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_disconnect"/>
    
    <item android:id="@+id/menu_buttonAlarmOff"
          android:icon="@drawable/alarmclock_shutdown"
          android:title="@string/menu_alarmOff"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_buttonTemperature"
          android:icon="@drawable/temperature"
          android:title="@string/menu_temperature"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_buttonLight"
          android:icon="@drawable/light"
          android:title="@string/menu_light"
          android:showAsAction="ifRoom|withText" />

</menu>