<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/definescene_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp" >

    <EditText
        android:id="@+id/descriptionScene"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
  		android:ems="10"
        android:hint="@string/sceneDescriptionField" />

    <Switch
        android:id="@+id/lightShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/descriptionScene"
        android:text="@string/sceneLightshow" />

    <Switch
        android:id="@+id/audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/lightShow"
        android:text="@string/sceneAudio" />
    
    <Button
        android:id="@+id/sceneButtonSave"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/audio"
        android:layout_marginTop="30dp"
        android:text="@string/sceneSave"/>
    
    <ListView
		android:id="@+id/sceneList_layout"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:isScrollContainer="true" >
	</ListView>
	
    <FrameLayout android:id="@+id/sceneList" 
            android:layout_width="0px" android:layout_height="wrap_content"
            android:background="?android:attr/detailsElementBackground" />

</RelativeLayout>

